# lammps-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  packages.rs  relnotes.md  set-rev
build-data/: rerun-if-env-changed
doc/: building-from-source.md  linking-a-system-library.md
examples/: link-test.rs  mpi-test.rs  omp-test-lite.rs  omp-test.rs
scripts/: clear-lammps  set-rev
src/: lib.rs  wrapper.h
src/fake-system/: mpi.h
